--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-PORT=3000
-MONGODB_URI=your_mongodb_connection_string
-JWT_SECRET=your_jwt_secret_key
+PORT=8080
+TESTNET_RPC="chain_testnet_rpc_url_here"
+PRIVATE_KEY="account_private_key_here"
+PINATA_API_KEY="pinata_api_key_here"
+PINATA_API_SECRET="pinata_api_secret_here"
+PINATA_JWT="pinata_jwt_token_here"
+PINATA_DOMAIN="pinata_custom_domain_url_here"
