--- a/package.json
+++ b/package.json
@@ -2,27 +2,45 @@
   "name": "aquaticus-project",
   "version": "1.0.0",
   "description": "NFT Gaming Smart Contract backend",
-  "main": "src/server.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "hardhat test",
-    "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.js"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "serve": "node dist/index.js",
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "deploy:localost": "npx hardhat ignition deploy ignition/modules/NFT.ts --network localhost",
+    "deploy:amoy": "npx hardhat ignition deploy ignition/modules/NFT.ts --network amoy"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "hardhat": "^2.22.15"
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.8.7",
+    "express": "^4.21.1",
+    "hardhat": "^2.22.15",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.6",
+    "@pinata/sdk": "^2.1.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "ethers": "^6.13.4",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3"
-  }
+    "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
