mint and get nft completed

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ PINATA_API_KEY="pinata_api_key_here"
 PINATA_API_SECRET="pinata_api_secret_here"
 PINATA_JWT="pinata_jwt_token_here"
 PINATA_DOMAIN="pinata_custom_domain_url_here"
+NFT_CONTRACT_ADDRESS="nft_smart_contract_deployed_address"
