--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules
 
 # Hardhat files
 /cache
-/artifacts
-
+/artifacts/@openzeppelin
+/artifacts/build-info
 # TypeChain files
 /typechain
 /typechain-types
