--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
   "dependencies": {
     "@nestjs/common": "^10.4.12",
     "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/contracts-upgradeable": "^4.9.6",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "@pinata/sdk": "^2.1.0",
+    "axios": "^1.8.1",
     "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.4",
+    "ethers": "^6.13.5",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
